[package]
name = "lasy"
version = "0.4.1"
authors = ["mitchmindtree <mitchell.nordine@gmail.com>"]
description = "A small library dedicated to LASER path optimisation."
readme = "README.md"
keywords = ["laser", "dac", "projection", "path", "optimisation"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/nannou-org/lasy.git"
homepage = "https://github.com/nannou-org/lasy"
edition = "2018"

[dependencies]
petgraph = { version = "0.5", default-features = false }
